--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,12 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Travel Advisor</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyDKAIWbkM0JwPKv5CVcIvM_iYsj5c7XtMs"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyBNgllNiB1mITQSDG4DluQHa6keqWFvABY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyAEMDky-KS48cf2K51q7jCP3BPiKaex730"></script>
+    <title>Travel Advisor App</title>
   </head>
   <body>
     <div id="root"></div>
